@@ -1,8 +1,3 @@
-<<<<<<< HEAD
-package com.rentex.global.config;
-
-import com.rentex.global.jwt.JwtAuthenticationFilter;
-=======
 //package com.rentex.global.config;
 //
 //import com.rentex.global.jwt.JwtAuthenticationFilter;
@@ -116,7 +111,6 @@ import com.rentex.global.jwt.JwtAuthenticationFilter;
 //}
 package com.rentex.global.config;
 
->>>>>>> origin/feature/admin-items
 import com.rentex.global.jwt.JwtAuthorizationFilter;
 import com.rentex.global.jwt.JwtTokenProvider;
 import com.rentex.global.jwt.OAuth2LoginSuccessHandler;
@@ -124,10 +118,6 @@ import com.rentex.user.service.CustomOAuth2UserService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-<<<<<<< HEAD
-import org.springframework.http.HttpMethod;
-=======
->>>>>>> origin/feature/admin-items
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -141,19 +131,13 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-<<<<<<< HEAD
-=======
 
->>>>>>> origin/feature/admin-items
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
-<<<<<<< HEAD
-@EnableMethodSecurity // @PreAuthorize, @PostAuthorize 사용을 위해 추가
-=======
 @EnableMethodSecurity
->>>>>>> origin/feature/admin-items
 @RequiredArgsConstructor
 public class SecurityConfig {
 
@@ -174,50 +158,6 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-<<<<<<< HEAD
-        // JWT 인증 필터 생성 및 로그인 처리 URL 설정
-        JwtAuthenticationFilter jwtAuthenticationFilter = new JwtAuthenticationFilter(authenticationManager(), jwtTokenProvider);
-        jwtAuthenticationFilter.setFilterProcessesUrl("/api/login");
-
-        http
-                // CORS 설정
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // CSRF 보호 비활성화 (Stateless 서버에서는 불필요)
-                .csrf(csrf -> csrf.disable())
-                // 세션을 사용하지 않는 Stateless 설정
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // 기본 제공되는 form 로그인과 http-basic 인증 비활성화
-                .formLogin(form -> form.disable())
-                .httpBasic(httpBasic -> httpBasic.disable())
-
-                // 커스텀 필터 적용
-                .addFilterBefore(new JwtAuthorizationFilter(jwtTokenProvider), UsernamePasswordAuthenticationFilter.class)
-                .addFilterAt(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-
-                // 경로별 인가(Authorization) 설정
-                .authorizeHttpRequests(authz -> authz
-                        .requestMatchers(
-                                "/api/auth/**",
-                                "/api/login",
-                                "/oauth2/**",
-                                "/error",
-                                "/swagger-ui/**",
-                                "/v3/api-docs/**",
-                                "/api/users/signup" // signup 경로를 여기에 포함
-                        ).permitAll()
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/api/partner/**").hasAnyRole("PARTNER", "ADMIN")
-                        .anyRequest().authenticated()
-                )
-
-                // OAuth2 소셜 로그인 설정
-                .oauth2Login(oauth2 -> oauth2
-                        // 로그인 성공 후 사용자 정보를 가져올 때의 설정
-                        .userInfoEndpoint(userInfo -> userInfo
-                                .userService(customOAuth2UserService) // 사용자 정보 처리 서비스 지정
-                        )
-                        // 로그인 성공 후처리 핸들러 지정 (JWT 발급 등)
-=======
         http
                 // CORS / CSRF / 세션
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
@@ -240,7 +180,6 @@ public class SecurityConfig {
                 // 소셜 로그인 핸들러(유지해도 무방)
                 .oauth2Login(oauth2 -> oauth2
                         .userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService))
->>>>>>> origin/feature/admin-items
                         .successHandler(oAuth2LoginSuccessHandler)
                 );
 
@@ -249,36 +188,15 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-<<<<<<< HEAD
-        CorsConfiguration configuration = new CorsConfiguration();
-        // 허용할 클라이언트 출처 설정
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        // 허용할 HTTP 메서드 설정
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        // 허용할 HTTP 헤더 설정
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
-        // 자격 증명(쿠키 등) 허용 여부
-        configuration.setAllowCredentials(true);
-        // 클라이언트에게 노출할 헤더 설정 (JWT 토큰 헤더 등)
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // 모든 경로에 대해 위 CORS 설정을 적용
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
-}
-=======
         CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        cfg.setAllowedMethods(Arrays.asList("GET","POST","PUT","PATCH","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(Arrays.asList("*"));
+        cfg.setAllowedOrigins(List.of("http://localhost:3000"));
+        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        cfg.setAllowedHeaders(List.of("*"));
         cfg.setAllowCredentials(true);
-        cfg.setExposedHeaders(Arrays.asList("Authorization"));
+        cfg.setExposedHeaders(List.of("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", cfg);
         return source;
     }
 }
->>>>>>> origin/feature/admin-items
